# amivoice-api-llm

./: .env.example  .gitignore  .textlintrc.json  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  uithub.sh
.claude/: settings.json
.claude/hooks/: gpu_serialize.sh
articles/: amivoice-claude-asr-correction.md
docs/: phase1_asr_implementation_plan.md  phase2_asr_evaluation_plan.md  phase3_llm_correction_plan.md  zenn_article_draft.md
inputs/: README.md
notebooks/: README.md  check_gpu.ipynb
outputs/: README.md
scripts/: compare_prompts.py  run_gpu.sh  setup-claude.sh  setup_ollama.sh
src/: 01_download_common_voice_test.py  02_add_white_noise.py  11_run_amivoice.py  12_run_gcp_speech.py  13_run_aws_transcribe.py  14_run_whisper_large_v3.py  15_run_whisper_large_v3_turbo.py  16_run_kotoba_whisper.py  17_run_reazonspeech.py  21_evaluate_asr.py  31_correct_asr_with_llm.py  32_judge_correction.py  33_summarize_phase3.py  README.md  asr_csv.py  check_gpu.py  llm_utils.py  text_normalization.py
tests/: test_judge_scoring.py  test_llm_correction.py
