# pyproject.toml
[project]
name = "docker-uv-template"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
description = "GPU-enabled Python project managed by uv"

dependencies = [
  "catboost>=1.2.8",
  "ipykernel>=6.29.5",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.6.1",
  "tensorflow>=2.19.0",
  "torch>=2.7.0",
  "xgboost>=3.0.2",
  "ruff>=0.3.0",
  "jupyter>=1.0.0",
  "jupyterlab>=4.0.0",
  "datasets>=2.20",
  "soundfile>=0.13.1",
  "librosa>=0.11.0",
  "tqdm>=4.67.3",
  "requests>=2.32.3",
  "python-dotenv>=1.2.2",
  "tenacity>=9.1.4",
  "jiwer>=4.0.0",
  "sudachipy>=0.6.11",
  "sudachidict-core>=20260428",
  "google-cloud-speech>=2.39.0",
  "transformers>=5.8.1",
  "accelerate>=1.13.0",
  "boto3>=1.43.9",
  "anthropic>=0.103.1",
]

[build-system]
requires = ["uv", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cu124"]

# ruffの設定
[tool.ruff]
line-length = 88
target-version = "py310"
indent-width = 4
extend-exclude = [
    "__pycache__",
    ".git",
    "*.ipynb_checkpoints",
    "*.pyc",
    "catboost_info",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "PLC0415"]

# ルールセット
[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "C4",   # flake8-comprehensions
    "BLE",  # flake8-blind-except
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C90",  # mccabe complexity
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "ISC",  # flake8-implicit-str-concat
    "G",    # flake8-logging-format
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PL",   # pylint
    "TRY",  # tryceratops
    "FLY",  # flynt
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # Line too long
    "RUF001",  # Ambiguous unicode in strings (fullwidth Japanese chars)
    "RUF002",  # Ambiguous unicode in docstrings (fullwidth Japanese chars)
]

# 自動修正設定
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
